k8s/demo/whoami/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami-deployment
  namespace: default
  labels:
    app: whoami
spec:
  replicas: 3
  selector:
    matchLabels:
      app: whoami
  template:
    metadata:
      labels:
        app: whoami
    spec:
      containers:
        - name: whoami
          image: docker.io/traefik/whoami:v1.10.2
          ports:
            - name: whoami
              containerPort: 80
