k8s/demo/whoami/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: whoami-svc
  namespace: default
  labels:
    service: whoami
spec:
  selector:
    app: whoami
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
